--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 tokio = {version = "1", features = ["full"]}
 clap = { version = "3", features = ["cargo", "wrap_help"] }
+hyper = { version = "1.0.0-rc.1", features = ["full"] }
+http = "0.2.0"
+http-body-util = "0.1.0-rc.2"
+bytes = "1.3.0"
